--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+.scrollbar::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 0.4rem;
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #070707;
+}
