add custom unit to container size

--- a/components/mobile/mobile-menu.module.scss
+++ b/components/mobile/mobile-menu.module.scss
@@ -96,7 +96,7 @@
     &::after {
       display: inline-block;
       height: 2px;
-      background-color: #fff;
+      background-color: purple;
     }
     &::before,
     &::after {
